# ASD-Project

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: Graph.h  functions.h
input/: g1.txt  g2.txt  g3.txt  g4.txt  pegaz.txt
input/my_tests/: g4.txt  g5.txt
src/: Graph.cpp  functions.cpp
test/: basic_tests.cpp  large_tests.cpp  my_tests.cpp  new_tests.cpp
